# rosaoirse

./: .gitignore  CMakeLists.txt  README.md
src/: yk_game.c  yk_renderer.c  yk_renderer.h
src/engine/: yk_renderer.c  yk_renderer.h
src/engine/platform/: linux_platform.c  mac_platform.c  win32_platform.c  yk_platform.h
src/game/: yk_game.c
src/platform/: linux_platform.c  mac_platform.c  win32_platform.c  yk_platform.h
